--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,7 @@
 
 .container {
   line-height: 50px;
+  background: white;
 }
 
 .paragraph {
@@ -23,4 +24,12 @@
 
 .header {
   text-decoration: underline;
+}
+
+html,
+body {
+  background-image: url("./images/morocco.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
