--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@ h2 {
 
 html,
 body {
-  background-image: url("./images/morocco.png");
+  background-image: url("./images/fall.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -44,4 +44,8 @@ body {
 
 .navbar {
   margin-bottom: 30px;
+}
+
+.card {
+  margin: 20px;
 }
