new years commit

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 }
 
 footer {
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
 h2 {
@@ -42,10 +42,7 @@ body {
   background-size: cover;
 }
 
-.navbar {
-  margin-bottom: 30px;
-}
-
 .card {
   margin: 20px;
+  box-shadow: 8px 5px #811600;
 }
